--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -183,6 +183,35 @@
     color: #fff !important;
     border-color: transparent;
 }
+
+.grey-dashed-line-divider {
+    border: none;
+    border-top: 1px dashed #ccc;
+    {#color: #fff;#}
+    {#background-color: #fff;#}
+    height: 1px;
+    width: 50%;
+}
+
+.score-box {
+    width: 27px;
+    height: 25px;
+    background: rgba(224, 58, 60, 0.16);
+    border-radius: 4px;
+    float: left;
+    margin: 0 8px 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.score-pointer {
+    font-size: 14px;
+    font-weight: 600;
+    color: #E03A3C;
+
+}
+
 </style>
 
 <section id="marketplace" class="marketplace">
