--- a/marketplace/templates/marketplace/filters/filters_player_for_club.html
+++ b/marketplace/templates/marketplace/filters/filters_player_for_club.html
@@ -11,4 +11,7 @@
     <div class="filter pr-2">
         {% include 'marketplace/filters/filter_year_to.html' with size=size %}
     </div>
+    <div class="filter pr-2">
+        {% include 'marketplace/filters/filter_score.html' with size=size %}
+    </div>
 {% endwith %}
