--- a/app/templates/platform/navigation/_nav_club.html
+++ b/app/templates/platform/navigation/_nav_club.html
@@ -15,6 +15,7 @@
         <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
     {% endif %}
     <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}?tag=dlaKlubu">{% trans 'Produkty' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'premium:main_page'%}">{% trans 'Score' %}</a></li>
 
     {% include 'platform/navigation/_nav_icons.html' %}
 
