--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -25,6 +25,7 @@
 
 {% if not request.user.is_authenticated %}
     <li class="nav-item" ><a class="nav-link" href="/about-project/">{% trans 'O projekcie' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'premium:main_page'%}">{% trans 'Score' %}</a></li>
 {% endif %}
 
 {% if not user.is_authenticated %}
