--- a/landingpage/templates/landingpage/partials/menu.html
+++ b/landingpage/templates/landingpage/partials/menu.html
@@ -21,3 +21,4 @@
     <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
 {% endif %}
 <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'premium:main_page'%}">{% trans 'Score' %}</a></li>
