--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -22,6 +22,7 @@
     <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
 {% endif %}
 <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'premium:main_page'%}">{% trans 'Score' %}</a></li>
 
 {% if not request.user.is_authenticated %}
     <li class="nav-item" ><a class="nav-link" href="/about-project/">{% trans 'O projekcie' %}</a></li>
