--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -1,6 +1,9 @@
 {% load playmaker %}
 {% load thumbnail %}
 {% load i18n %}
+{% load static %}
+
+{% include 'marketplace/pm_score_tooltip.html' %}
 
 {% with player=object.creator %}
 <div class="card announcement-card m-1 serv-section-2">
@@ -13,19 +16,24 @@
         <div class="section-heading-line-left"></div>
     <div class="card-body row no-gutters">
 
-        {% if object.creator.pm_score %}
-            <div>
-                <div class="score-box">
-                    <div class="score-pointer">
-                        {{ object.creator.pm_score }}
-                    </div>
+        <div>
+            <div class="score-box">
+                <div class="score-pointer">
+                    {% if object.creator.pm_score %}
+                        {{ object.creator.pm_score | default:"-" }}
+                    {% else %}
+                        <img data-toggle="modal" data-target="#noPmScore" src="{% static 'assets/img/landingpage/question_mark.png' %}" alt="question mark">
+                    {% endif %}
                 </div>
-                <span style="font-size: 14px">
-                    PlayMaker Score
-                </span>
             </div>
-            <div class="grey-dashed-line-divider col-12"></div>
-        {% endif %}
+            <span style="font-size: 14px">
+                PlayMaker Score
+            </span>
+{#            {% if not object.creator.pm_score %}#}
+{#                <img data-toggle="modal" data-target="#questionModal1" src="{% static 'assets/img/landingpage/question_mark.png' %}" alt="question mark">#}
+{#            {% endif %}#}
+        </div>
+        <div class="grey-dashed-line-divider col-12"></div>
 
         <div class="row centered-div">
             <div class="card-text">
@@ -65,7 +73,7 @@
                     {% else %}
                         <h5>
                             {{ object|display_voivodeship }}
-                            {{ object.address }} +{{ object.practice_distance }}km
+                            {{ object.address|default:"" }} +{{ object.practice_distance }}km
                         </h5>
                     {% endif %}
                     Region
