--- a/premium/templates/premium/product_base.html
+++ b/premium/templates/premium/product_base.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="landingpage__section mb-3 col-xl-6 p-4 d-flex flex-column flex-xl-row-reverse justify-content-center w-100">
                 <img src="{% static 'assets/img/landingpage/pilka_out.png' %}"
-                     class="w-50"
+                     class="w-50 justify-content-center m-auto d-none d-xl-block"
                      alt="Player standing infront of stadium"
                 >
                 <div>
@@ -30,7 +30,11 @@
                     <p style="margin: 0">Otwórz nowe możliwości TRANSFEROWE!</p>
                     <p>Sprawdź, co mówią Twoje statystyki!</p>
                     <p><strong>Poznaj Play<span style="color: #e03a3c;">Maker</span> Score!</strong></p>
-
+                    <div class="d-flex align-items-center mt-5 flex-column">
+                        <a href="#pricing" class="text-center reach_us_btn">
+                            Zgłoś się
+                        </a>
+                    </div>
                 </div>
 
             </div>
@@ -41,10 +45,10 @@
         <div class="container">
 
             <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-auto">
-                <a data-href="#what_is_pm_score"><p class="active__border">PlayMaker Score</p></a>
-                <a data-href="#points"><p>Punktacja</p></a>
-                <a data-href="#examples"><p>PlayMaker Score w przykładach</p></a>
-                <a data-href="#pricing"><p>Cennik</p></a>
+                <a data-href="#what_is_pm_score"><p class="active__border mx-4 mx-lg-auto">PlayMaker Score</p></a>
+                <a data-href="#points"><p class="mx-4 mx-lg-auto">Punktacja</p></a>
+                <a data-href="#examples"><p class="mx-4 mx-lg-auto">PlayMaker Score w przykładach</p></a>
+                <a data-href="#pricing"><p class="mx-4 mx-lg-auto">Cennik</p></a>
             </div>
         </div>
     </section>
