added logotype in premium product view, removed lotto from footer

--- a/backend/templates/partials/footer.html
+++ b/backend/templates/partials/footer.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="col-lg-4 col-md-6">
-            <img src="{% static 'assets/img/coop/lotto.jpg' %}" alt="logo_lotto" class='footer-logos'>   
+{#            <img src="{% static 'assets/img/coop/lotto.jpg' %}" alt="logo_lotto" class='footer-logos'>   #}
             <a href='https://www.scoutmaker.pro'>
                 <img src="{% static 'assets/img/coop/scoutmakerPro_ciemny.png' %}" alt="logo_vitasport" class='footer-logos'>
             </a>
