--- a/premium/templates/premium/rest_sections.html
+++ b/premium/templates/premium/rest_sections.html
@@ -47,9 +47,19 @@
   </div>
 </section>
 
+<section id="logotypes" class="">
+  <div class="container">
+        {% include 'premium/logotype.html' %}
+  </div>
+</section>
+
 <style>
     .title {
         font-size: 2.5rem;
+    }
+
+    #logotypes {
+        padding: 0;
     }
 </style>
 
