fixed bug with filters on players base

--- a/marketplace/templates/marketplace/filters/filter_score.html
+++ b/marketplace/templates/marketplace/filters/filter_score.html
@@ -2,7 +2,7 @@
 <div class="dropdown">
     <button class="btn-request" type="button" id="filterDropdown" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
-        Playmaker Score
+        PlayMaker Score
     </button>
     <div class="dropdown-menu p-4" aria-labelledby="filterDropdown">
         <form class="">
