--- a/backend/templates/500.html
+++ b/backend/templates/500.html
@@ -1,14 +1,10 @@
-{% extends 'base.html' %}
-{% load playmaker %}
-
-{% logger500 request.get_full_path %}
 
 {% block content %}
     <section>
         <div class="container text-center">
-            <div class="row justify-content-center">
-                <img class="col-lg-3 col-6 mb-5" src="{% static 'assets/img/404.png' %}" alt="404">
-            </div>
+{#            <div class="row justify-content-center">#}
+{#                <img class="col-lg-3 col-6 mb-5" src="{% static 'assets/img/404.png' %}" alt="404">#}
+{#            </div>#}
             <div class="row">
                 <h1 class="col">Przepraszamy, ale strona nie istnieje.</h1>
             </div>
