google seo metatag

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -11,6 +11,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="e70LCOGd7jlvuQXOwdPS9g21ZNfPCqhrBC9yT1ackMY" />
   <title>{% block title %}
       {% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title|default:"PlayMaker.pro" }}{% endif %}
     {% endblock %}
