--- a/inquiries/templates/inquiries/emails/OUTDATED_INQUIRY.html
+++ b/inquiries/templates/inquiries/emails/OUTDATED_INQUIRY.html
@@ -17,6 +17,13 @@ W związku z tym zwiększamy Twoją pulę zapytań dostępnych do wykorzystania 
         </a>
       </p>
 
+    <p style="font-size: 14px; color: #777; line-height: 1.4; margin-top: 30px;">
+        Jeżeli po kliknięciu link się nie otworzy, skopiuj go, wklej w pole adresu przeglądarki i przejdź do wskazanej strony:
+    </p>
+    <p>
+        <a href="#url#" style="font-size:13">#url#</a>
+    </p>
+
       <p style="font-size: 16px; color: #777; line-height: 1.4; margin-top: 30px;">
         Do zobaczenia na PlayMaker.pro!
       </p>
