--- a/inquiries/templates/inquiries/emails/ACCEPTED_INQUIRY.html
+++ b/inquiries/templates/inquiries/emails/ACCEPTED_INQUIRY.html
@@ -16,7 +16,12 @@
         style="display: inline-block; padding: 12px 24px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold; font-size: 16px;">
         Kontakty
         </a>
-    </p>
+        <p style="font-size: 14px; color: #777; line-height: 1.4; margin-top: 30px;">
+        Jeżeli po kliknięciu link się nie otworzy, skopiuj go, wklej w pole adresu przeglądarki i przejdź do wskazanej strony:
+        </p>
+        <p>
+            <a href="https://playmaker.pro/kontakty" style="font-size:13">https://playmaker.pro/kontakty</a>
+        </p>
     <p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
         Pozdrawiamy,<br>
         Zespół PlayMaker.pro
