--- a/mailing/templates/mailing/mails/NEW_USER.html
+++ b/mailing/templates/mailing/mails/NEW_USER.html
@@ -14,7 +14,10 @@
     </p>
 
     <p style="font-size: 14px; color: #777; line-height: 1.4; margin-top: 30px;">
-        Jeżeli po kliknięciu link się nie otworzy, skopiuj go, wklej w pole adresu przeglądarki i przejdź do wskazanej strony.
+        Jeżeli po kliknięciu link się nie otworzy, skopiuj go, wklej w pole adresu przeglądarki i przejdź do wskazanej strony:
+    </p>
+    <p>
+        <a href="#url#" style="font-size:13">#url#</a>
     </p>
     <p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
         Pozdrawiamy,<br>
