--- a/mailing/templates/5_referral_reward_referrer.html
+++ b/mailing/templates/5_referral_reward_referrer.html
@@ -1,42 +1,44 @@
-{% extends "mailing/mails/email_base.html" %}
+{% extends "email_base.html" %}
 
 {% block content %}
-    <h1 style="font-size: 28px; color: #222; margin-bottom: 20px;">
-        Gratulacje!
-    </h1>
+<h1 style="font-size: 28px; color: #222; margin-bottom: 20px;">
+    Gratulacje!
+</h1>
 
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Za skuteczne polecenie trzech nowych użytkowników otrzymujesz od nas wyjątkowe nagrody:
-    </p>
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Za skuteczne polecenie trzech nowych użytkowników otrzymujesz od nas wyjątkowe nagrody:
+</p>
 
-    <ul style="list-style-type: disc; list-style-position: inside; padding-left: 0; margin-top: 10px; color: #555; font-size: 14px; line-height: 1.6; font-weight: bold;">
-        <li style="margin-bottom: 10px;">
+<ul
+    style="list-style-type: disc; list-style-position: inside; padding-left: 0; margin-top: 10px; color: #555; font-size: 14px; line-height: 1.6; font-weight: bold;">
+    <li style="margin-bottom: 10px;">
         1 miesiąc darmowego konta Premium na PlayMaker.pro
-        </li>
-        <li style="margin-bottom: 10px;">
-        3 specjalne treningi wideo na YouTube, które poprawią twoją skoczność, wzmocnią twoje mięśnie głębokie oraz zwiększą odporność na kontuzje:<br/>
-    </ul>
-    <a href="https://www.youtube.com/watch?v=pfi4ob0bel8"
+    </li>
+    <li style="margin-bottom: 10px;">
+        3 specjalne treningi wideo na YouTube, które poprawią twoją skoczność, wzmocnią twoje mięśnie głębokie oraz
+        zwiększą odporność na kontuzje:<br />
+</ul>
+<a href="https://www.youtube.com/watch?v=pfi4ob0bel8"
     style="display: inline-block; padding: 8px 16px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: 500; font-size: 14px;">
-        Trening pierwszy
-    </a>
-    <a href="https://www.youtube.com/watch?v=Gqmptm7qbCQ"
+    Trening pierwszy
+</a>
+<a href="https://www.youtube.com/watch?v=Gqmptm7qbCQ"
     style="display: inline-block; padding: 8px 16px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: 500; font-size: 14px;">
-        Trening drugi
-    </a>
-    <a href="https://www.youtube.com/watch?v=DYBmgvzQcd4"
+    Trening drugi
+</a>
+<a href="https://www.youtube.com/watch?v=DYBmgvzQcd4"
     style="display: inline-block; padding: 8px 16px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: 500; font-size: 14px;">
-        Trening trzeci
-    </a>
+    Trening trzeci
+</a>
 
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Wkrótce otrzymasz dostęp do konta Premium, a powyżej znajdziesz linki do treningów.
-    </p>
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Dziękujemy za aktywne budowanie społeczności PlayMaker.pro!
-    </p>
-    <p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
-        Pozdrawiamy,<br>
-        Zespół PlayMaker.pro
-    </p>
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Wkrótce otrzymasz dostęp do konta Premium, a powyżej znajdziesz linki do treningów.
+</p>
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Dziękujemy za aktywne budowanie społeczności PlayMaker.pro!
+</p>
+<p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
+    Pozdrawiamy,<br>
+    Zespół PlayMaker.pro
+</p>
 {% endblock %}
