--- a/mailing/templates/inquiries/rejected_inquiry.html
+++ b/mailing/templates/inquiries/rejected_inquiry.html
@@ -1,4 +1,4 @@
-{% extends "mailing/mails/email_base.html" %}
+{% extends "email_base.html" %}
 
 {% block content %}
 <h1 style="font-size: 24px; color: #222; margin-bottom: 20px;">
