--- a/mailing/templates/referral_reward_referred.html
+++ b/mailing/templates/referral_reward_referred.html
@@ -1,28 +1,28 @@
-{% extends "mailing/mails/email_base.html" %}
+{% extends "email_base.html" %}
 
 {% block content %}
-    <h1 style="font-size: 28px; color: #222; margin-bottom: 20px;">
-        Witaj w PlayMaker.pro!
-    </h1>
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Zarejestrowałeś(-aś) się z polecenia innego użytkownika – gratulacje!
-    </p>
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Na dobry początek otrzymujesz od nas nagrodę – wyjątkowy ebook.<br/>
-        Możesz go pobrać, klikając w poniższy link:
-    </p>
-    <p>
-        <a href="https://drive.google.com/file/d/1-zVqUmn96QvzlMDPJJsuyGCgFwNzF1xk/view"
-           style="display: inline-block; padding: 12px 24px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold; font-size: 16px;">
-            Odbierz nagrodę
-        </a>
-    </p>
+<h1 style="font-size: 28px; color: #222; margin-bottom: 20px;">
+    Witaj w PlayMaker.pro!
+</h1>
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Zarejestrowałeś(-aś) się z polecenia innego użytkownika – gratulacje!
+</p>
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Na dobry początek otrzymujesz od nas nagrodę – wyjątkowy ebook.<br />
+    Możesz go pobrać, klikając w poniższy link:
+</p>
+<p>
+    <a href="https://drive.google.com/file/d/1-zVqUmn96QvzlMDPJJsuyGCgFwNzF1xk/view"
+        style="display: inline-block; padding: 12px 24px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold; font-size: 16px;">
+        Odbierz nagrodę
+    </a>
+</p>
 
-    <p style="font-size: 16px; color: #555; line-height: 1.6;">
-        Cieszymy się, że dołączyłeś(-aś) do naszej społeczności!
-    </p>
-    <p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
+<p style="font-size: 16px; color: #555; line-height: 1.6;">
+    Cieszymy się, że dołączyłeś(-aś) do naszej społeczności!
+</p>
+<p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
     Pozdrawiamy,<br>
     Zespół PlayMaker.pro
-    </p>
+</p>
 {% endblock %}
