--- a/mailing/templates/premium_expired.html
+++ b/mailing/templates/premium_expired.html
@@ -1,25 +1,25 @@
-{% extends "mailing/mails/email_base.html" %}
+{% extends "email_base.html" %}
 
 {% block content %}
-  <h1 style="font-size: 24px; color: #222; margin-bottom: 20px;">Cześć!</h1>
+<h1 style="font-size: 24px; color: #222; margin-bottom: 20px;">Cześć!</h1>
 
-  <p style="font-size: 16px; color: #555; line-height: 1.6; margin-bottom: 20px;">
-    Twoje konto Premium na PLAYMAKER.pro wygasło.<br/> Nie przegap korzyści, jakie daje dostęp do zaawansowanych funkcji!
-  </p>
+<p style="font-size: 16px; color: #555; line-height: 1.6; margin-bottom: 20px;">
+  Twoje konto Premium na PLAYMAKER.pro wygasło.<br /> Nie przegap korzyści, jakie daje dostęp do zaawansowanych funkcji!
+</p>
 
-  <p style="font-size: 16px; color: #555; line-height: 1.6; margin-bottom: 30px;">
-    Kliknij w link i odnów je teraz 👉 <a href="https://www.playmaker.pro/premium"
-       style="display: inline-block; padding: 12px 24px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold; font-size: 12px;">
+<p style="font-size: 16px; color: #555; line-height: 1.6; margin-bottom: 30px;">
+  Kliknij w link i odnów je teraz 👉 <a href="https://www.playmaker.pro/premium"
+    style="display: inline-block; padding: 12px 24px; background-color: #ED1C24; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold; font-size: 12px;">
     Premium
-    </a>
-  </p>
+  </a>
+</p>
 
-  <p style="font-size: 16px; color: #777; line-height: 1.4; margin-top: 30px;">
-    Do zobaczenia na PlayMaker.pro!
-  </p>
+<p style="font-size: 16px; color: #777; line-height: 1.4; margin-top: 30px;">
+  Do zobaczenia na PlayMaker.pro!
+</p>
 
-  <p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
-    Pozdrawiamy,<br>
-    Zespół PlayMaker.pro
-  </p>
+<p style="font-size: 16px; color: #555; line-height: 1.6; margin-top: 40px;">
+  Pozdrawiamy,<br>
+  Zespół PlayMaker.pro
+</p>
 {% endblock %}
