refactor: Update Celery worker autoscaling, enhance email confirmation command, and improve email template messaging

--- a/mailing/templates/confirm_email.html
+++ b/mailing/templates/confirm_email.html
@@ -4,7 +4,8 @@
     Cześć {{user.first_name}}!
 </h1>
 <p style="font-size: 16px; color: #555; line-height: 1.6; margin-bottom: 30px;">
-    Kliknij w poniższy link aktywacyjny, aby potwierdzić swój adres email i dokończyć proces:
+    Nie zweryfikowałeś jeszcze swojego adresu email. <br />
+    Kliknij w poniższy link, aby potwierdzić swój adres email i dokończyć proces rejestracji:
 </p>
 <p>
     <a href="{{ url }}"
